# old-websites

./: .gitignore  README.md  configure.ac  squeakyclean.sh
doc/: Makefile.am  logos.txt
doc/minimal/: Makefile.am  answer.c  bad_method.c  main.c  method_options.c  not_found.c
doc/tutorial-ch2-argv/: example.c  main.c
doc/tutorial-ch2-pedantic/: main.c
doc/tutorial-ch2-time/: Makefile.am  example.c  main.c
doc/tutorial-ch3/: Makefile.am  example.c
doc/tutorial-ch3-ipaddr/: Makefile.am  answer.c  main.c  onconnect.c  onconnect.h
doc/tutorial-ch3-pages/: Makefile.am  example.c  example.h
doc/tutorial-ch4/: answer.c  answer.h
doc/tutorial-ch4-sleep/: Makefile.am  answer.c  main.c
doc/tutorial-ch4-timer/: Makefile.am  answer.c  main.c
doc/tutorial-ch5/: Makefile.am  answer.c  main.c
doc/tutorial-ch5-ipblock/: Makefile.am  answer.c  badlist.c  badlist.h  connect.c  connect.h  debug.c  debug.h  main.c
doc/tutorial-ch6/: Makefile.am  answer.c  bad_method.c  bad_method.h  debug.c  debug.h  main.c  method_options.h  not_found.c  request_cleanup.c  request_cleanup.h  simple_form.c  simple_form.h  state.h
doc/tutorial-ch7/: Makefile.am  answer.c  common_macros.h  daemon_state.c  daemon_state.h  debug.h  forbidden.h  main.c  request_cleanup.c  request_state.c  request_state.h  service_unavailable.h  simple_upload_form.c  simple_upload_form.h
doc/tutorial-ch8/: Makefile.am  answer.c  bad_method.h  common_macros.h  daemon_state.c  daemon_state.h  forbidden.c  html_encode.c  html_encode.h  main.c  method_options.h  multi_form.c  multi_form.h  not_found.h  request_cleanup.c  request_state.c  request_state.h  server_error.c  server_error.h  service_unavailable.c  session.c
doc/tutorial-ch9/: Makefile.am  answer.c  daemon_state.h  debug.c  gen_keys.sh  load_file.c  load_file.h  main.c  multi_form.c  multi_form.h  request_state.c  session.h
src/: Makefile.am  example.c  main.c
