
if TUTORIAL

SUBDIRS = tutorial-ch2 \
	  tutorial-ch2-pedantic \
	  tutorial-ch2-argv \
	  tutorial-ch2-time \
	  tutorial-ch3 \
	  tutorial-ch3-pages \
	  tutorial-ch3-ipaddr \
	  tutorial-ch4 \
	  tutorial-ch4-sleep \
	  tutorial-ch4-timer \
	  tutorial-ch5 \
	  tutorial-ch5-ipblock \
	  tutorial-ch6 \
	  tutorial-ch7 \
	  tutorial-ch8 \
	  tutorial-ch9 \
	  minimal

else

SUBDIRS = 

endif

